--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,10 @@
-<div class="container">
-  @for (category of sectionCategory; track $index) {
-    <div class="mt-3">
-      <h1 class="text-center">{{sectionTitle[$index]}}</h1>
-    <div id="categoryContainer" class="container d-flex">
-      @for (item of items; track item.id) {
-        @if (item.category == category) {
-          <app-cards [products]='item'></app-cards>
-        }
-      }
-    </div>
-  </div>
-  }
-</div>
+
+<app-navbar></app-navbar>
+
+@if (isAdmin) {
+    <h1>hello admin</h1>
+}@else {
+    <h2>Unauthorised</h2>
+}
+
+<router-outlet></router-outlet>
