--- a/src/app/ui/cards/cards.component.html
+++ b/src/app/ui/cards/cards.component.html
@@ -1,10 +1,11 @@
 
 <div class="col p-2">
     <div class="card" style="width: 18rem;">
-        <img src={{products.thumbnail}} class="card-img-top" alt="Kottayam">
+        <img ngSrc={{products.thumbnail}} class="card-img-top" alt="Kottayam" width="32" height="32" priority>
         <div class="card-body">
             <h5 class="card-title text-center">{{products.title}}</h5>
           <p class="card-text">{{products.description}}</p>
+          <app-button (myEvent)="btnEvent(products.id)" ></app-button>
         </div>
     </div>
 </div>
